[package]
name = "cirrus_egui"
version = "0.1.0"
edition = "2021"

[dependencies]
cirrus_path = { path = "../../path" }
cirrus_error = { path = "../../error" }
cirrus_config = { path = "../../config" }
cirrus_theming = { path = "../../theming" }
cirrus_authors = { path = "../../authors/v1" }

log = "0.4"
toml = "1.1"
toml_edit = "0.25"
egui = "0.33"
textwrap = "0.16"
egui-notify = "0.21"
serde = { version = "1.0", features = ["derive"] }