[package]
name = "cirrus_egui_v1"
version = "0.1.0"
edition = "2021"

[dependencies]
cirrus_path = { package = "cirrus_path_v1", path = "../../path/v1" }
cirrus_error = { package = "cirrus_error_v1", path = "../../error/v1" }
cirrus_config = { package = "cirrus_config_v1", path = "../../config/v1" }
cirrus_theming = { package = "cirrus_theming_v1", path = "../../theming/v1" }
cirrus_authors = { package = "cirrus_authors_v1", path = "../../authors/v1" }

egui-notify = "0.21"
egui = {version = "0.33", default-features = false}

log = "0.4"
toml = "1.1"
toml_edit = "0.25"
textwrap = "0.16"
serde = { version = "1.0", features = ["derive"] }